--- a/.gitmodules
+++ b/.gitmodules
@@ -1,3 +1,3 @@
-[submodule "mycoolllama/src/main/cpp/llama.cpp"]
-	path = mycoolllama/src/main/cpp/llama.cpp
+[submodule "llama.cpp"]
+	path = llama/src/main/cpp/external/llama.cpp
 	url = https://github.com/ggml-org/llama.cpp.git
