--- a/gradle/libs.versions.toml
+++ b/gradle/libs.versions.toml
@@ -16,6 +16,7 @@ material = "1.12.0"
 navigationCompose = "2.9.0"
 hilt = "2.56.2"
 twain = "0.3.2"
+executorch = "0.6.0"
 
 [libraries]
 androidx-core-ktx = { group = "androidx.core", name = "core-ktx", version.ref = "coreKtx" }
@@ -42,6 +43,7 @@ androidx-material3 = { group = "androidx.compose.material3", name = "material3" 
 androidx-appcompat = { group = "androidx.appcompat", name = "appcompat", version.ref = "appcompat" }
 material = { group = "com.google.android.material", name = "material", version.ref = "material" }
 twain = { module = "com.colintheshots:twain", version.ref = "twain" }
+pytorch-executorch = { group = "org.pytorch", name = "executorch-android", version.ref = "executorch"}
 
 [plugins]
 android-application = { id = "com.android.application", version.ref = "agp" }
